samples/_failures_safe/1761792052_c04bc7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_268c00c7.c: In function ‘main’:
./samples/SAFE/__tmp_268c00c7.c:157:5: error: expected declaration or statement at end of input
  157 |     buffer_free(&compressed);
      |     ^~~~~~~~~~~
